Fix rows not aligning with cells causing click inconsistencies
Use flexbox to tighten up those elements

--- a/src/Board.css
+++ b/src/Board.css
@@ -3,6 +3,7 @@
 }
 
 .Board__row {
-  height: 10px;
+  display: flex;
+  justify-content: center;
 }
 
