--- a/src/Cell.css
+++ b/src/Cell.css
@@ -1,5 +1,4 @@
 .Cell {
-  display: inline-block;
   width: 10px;
   height: 10px;
   background: #eee;
